# citadel-mandate-demo

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  demo.tape  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml
benches/: enforcement.rs
docs/: SECURITY-AND-DESIGN.md
examples/: agent_loop.rs  verify_wire.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: verify.rs
playground/: build.sh  index.html
sdks/: README.md  check.sh
sdks/python/: citadel.py  sign.py
sdks/ts/: citadel.mjs  sign.mjs
src/: audit.rs  engine.rs  lib.rs  main.rs  mandate.rs  protocol.rs  scenarios.rs  scope.rs  serve.rs  token.rs  wasm.rs
tests/: adversarial.rs  enforcement.rs  properties.rs  protocol_neutral.rs  serve.rs
