[package]
name = "citadel-mandate-demo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Open demo: runtime enforcement of user-signed (Ed25519) AP2-style Intent Mandates for AI-agent payments."
repository = "https://github.com/Polatkalender/citadel-mandate-demo"
readme = "README.md"
keywords = ["ai-agents", "payments", "ap2", "authorization", "ed25519"]
categories = ["authentication", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ed25519-dalek = "2"
base64 = "0.22"
sha2 = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

# Native-only: the `serve` HTTP gateway (axum/tokio don't target wasm).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }

# Wasm-only: bindings for the browser playground. `uuid`'s `js` feature wires
# getrandom for wasm (uuid is compiled even though the wasm path doesn't mint v4).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
uuid = { version = "1", features = ["v4", "js"] }

[[bin]]
name = "citadel-mandate-demo"
path = "src/main.rs"

[dev-dependencies]
# Adversarial / boundary tests construct and tamper mandates directly.
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
# Property-based invariants (fuzz-lite, runs in `cargo test`).
proptest = "1"
# Throughput / latency benchmarks (`cargo bench`).
criterion = "0.8"
# HTTP serve integration test (drives the axum router directly).
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
axum = "0.8"

[[bench]]
name = "enforcement"
harness = false

[profile.release]
# Lean for fast, reliable demo/CI builds (no fat LTO).
strip = true

# wasm-pack runs wasm-opt, whose bundled validator rejects the bulk-memory ops
# rustc emits by default for wasm32. The playground doesn't need that size pass,
# so skip it (keeps the wasm build green without pinning binaryen).
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
